--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -32,11 +32,12 @@
     <Button android:id="@+id/crime_date"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      />
+      android:layout_weight="1"/>
 
     <CheckBox android:id="@+id/crime_solved"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_weight="1"
       android:text="@string/crime_solved_label"
       />
   </LinearLayout>
