--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:layout_alignParentRight="true"
         android:enabled="false"
+        android:focusable="false"
         android:padding="4dp"/>
     <TextView
         android:id="@+id/crime_list_item_titleTextView"
