--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -1,6 +1,7 @@
-<xmlns:android="http://schemas.android.com/apk/res/android">
+<xmlns:android="http://schemas.android.com/apk/res/android"
   <android:id="@+id/dialog_date_datePicker">
   <android:layout_width="wrap_content">
   <android:layout_height="wrap_content">
   <android:calendarViewShown="false">
+  >
   
